fix overflow bug

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
 
 .display {
     padding: 16px;
+    min-height: 120px;
 
     margin-bottom: 16px;
     border-radius: 5px;
@@ -29,7 +30,7 @@ body {
 
     font-family: "Orbitron";
 
-    text-overflow: wrap;
+    overflow-wrap: break-word;
 }
 
 .expression {
